Lots of bugs fixed... Still horribly broken in the main list but we're getting closer yet.

--- a/modules/view_list/view_list.css
+++ b/modules/view_list/view_list.css
@@ -1,4 +1,2 @@
-#view-list td {
-	border-bottom: 1px solid #333;
-	font: 10px Verdana;
-}
+#view-list { font: 10px Verdana; }
+#view-list td { border-bottom: 1px solid #333; }
